[gd_scene load_steps=7 format=1]

[ext_resource path="res://assets/textures/lowrezjam.png" type="Texture" id=1]
[ext_resource path="res://game/items/Hand.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 7.32375, 7.29585 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 12.1822, 10.2865 )

[sub_resource type="Animation" id=4]

resource/name = "close"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Rect2( 24, 40, 24, 24 ) ]
}

[sub_resource type="Animation" id=3]

resource/name = "open"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 40, 24, 24 ) ]
}

[node name="Hand" type="Sprite"]

texture = ExtResource( 1 )
region = true
region_rect = Rect2( 24, 40, 24, 24 )
script/script = ExtResource( 2 )
hand = "left"

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3.8671, -0.972023 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 3.8671, -0.972023 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Input" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 2 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Input"]

transform/pos = Vector2( 0, 2 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/close = SubResource( 4 )
anims/open = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "close"

[connection signal="area_enter" from="Area2D" to="." method="_on_Area2D_area_enter"]

[connection signal="area_exit" from="Area2D" to="." method="_on_Area2D_area_exit"]

[connection signal="input_event" from="Input" to="." method="_on_input_event"]


